--- a/public/css/style.css
+++ b/public/css/style.css
@@ -43,6 +43,9 @@ nav {
       text-decoration: none;
       line-height: 2rem;
     }
+    :last-child {
+      color: rgb(100 116 139);
+    }
   }
 
   .links {
@@ -105,7 +108,6 @@ form {
     padding: 0.375rem 0;
     color: rgb(17 24 39);
     box-shadow:
-      inset 0 0 0 0 white,
       inset 0 0 0 1px rgb(209 213 219),
       0 1px 2px 0 rgb(0 0 0 / 5%);
   }
@@ -254,6 +256,12 @@ main.home {
           rgba(0, 0, 0, 0.1) 0 1px 3px 0,
           rgba(0, 0, 0, 0.1) 0 1px 2px -1px;
 
+        &:hover {
+          box-shadow:
+            0 10px 15px -3px rgb(0 0 0 / 0.1),
+            0 4px 6px -4px rgb(0 0 0 / 0.1);
+        }
+
         button {
           position: absolute;
           top: 1rem;
@@ -272,6 +280,275 @@ main.home {
           }
         }
       }
+    }
+  }
+}
+
+main.board {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  min-height: 0;
+  overflow-x: scroll;
+
+  h1 button {
+    margin: 1rem 2rem;
+    font-size: 1.5rem;
+    line-height: 2rem;
+    padding: 0.25rem 0.5rem;
+    border-color: transparent;
+    border-width: 1px;
+    border-radius: 0.5rem;
+    display: block;
+    color: rgb(30 41 59);
+    font-weight: 500;
+  }
+
+  .columns {
+    display: flex;
+    flex-grow: 1;
+    min-height: 0;
+    height: 100%;
+    align-items: start;
+    gap: 1rem;
+    padding: 0 2rem 1rem;
+
+    .column {
+      flex-shrink: 0;
+      display: flex;
+      flex-direction: column;
+      overflow: hidden;
+      max-height: 100%;
+      width: 20rem;
+      background-color: rgb(241 245 249);
+      border-color: rgb(148 163 184);
+      box-shadow: 0 1px 2px 0 #94a3b8;
+      border-radius: 0.75rem;
+
+      .column-header {
+        padding: 0.5rem;
+        display: flex;
+        gap: 0.5rem;
+
+        & > button {
+          text-align: left;
+          width: 100%;
+          border-radius: 0.75rem;
+          border-width: 1px;
+          border-color: transparent;
+          padding: 0.25rem 0.5rem;
+          font-weight: 500;
+          color: rgb(71 85 105);
+          flex-grow: 1;
+        }
+
+        & > form {
+          padding-right: 0.5rem;
+          display: flex;
+          align-items: center;
+
+          button {
+            &:hover {
+              color: rgb(244 66 80);
+            }
+
+            svg {
+              width: 1rem;
+              height: 1rem;
+              display: inline;
+              align-self: center;
+            }
+          }
+        }
+      }
+
+      .card-list {
+        flex-grow: 1;
+        overflow: auto;
+
+        .card {
+          border-top-width: 2px;
+          border-bottom-width: 2px;
+          margin-bottom: -2px;
+          cursor: grab;
+          padding: 0.25rem 0.5rem;
+          border-color: transparent;
+
+          &:active {
+            cursor: grabbing;
+          }
+
+          &:last-of-type {
+            margin-bottom: 0;
+          }
+
+          .card-content {
+            background: white;
+            box-shadow:
+              0 1px 3px 0 #cbd5e1,
+              0 1px 2px -1px #cbd5e1;
+            border-color: #cbd5e1;
+            font-size: 0.875rem;
+            line-height: 1.25rem;
+            border-radius: 0.75rem;
+            width: 100%;
+            padding: 0.25rem 0.5rem;
+            position: relative;
+
+            & > .spacer {
+              margin-top: 0.5rem;
+            }
+
+            form button {
+              position: absolute;
+              top: 1rem;
+              right: 1rem;
+
+              &:hover {
+                color: rgb(244 66 80);
+              }
+
+              svg {
+                width: 1rem;
+                height: 1rem;
+                display: inline;
+                align-self: center;
+              }
+            }
+          }
+        }
+      }
+
+      .add-card {
+        padding: 0.5rem;
+
+        button {
+          flex-grow: 0;
+          display: flex;
+          align-items: center;
+          gap: 0.5rem;
+          width: 100%;
+          text-align: left;
+          border-radius: 0.75rem;
+          padding: 0.5rem;
+          font-weight: 500;
+          color: rgb(100 116 139);
+
+          &:hover {
+            background-color: rgb(226 232 240);
+          }
+
+          & > svg {
+            width: 1rem;
+            height: 1rem;
+            display: inline;
+            align-self: center;
+          }
+        }
+      }
+    }
+
+    .add-column {
+      flex-shrink: 0;
+      display: flex;
+      justify-content: center;
+      height: 4rem;
+      width: 4rem;
+      background-color: rgb(0 0 0 / 0.1);
+      border-radius: 0.75rem;
+
+      &:hover {
+        background-color: rgb(255 255 255 / 0.05);
+      }
+
+      svg {
+        width: 2rem;
+        height: 2rem;
+        display: inline;
+        align-self: center;
+      }
+    }
+
+    form.new-column,
+    form.new-item {
+      &.new-item {
+        padding: 0.25rem 0.5rem;
+        border-top-width: 2px;
+        border-bottom-width: 2px;
+        border-color: transparent;
+      }
+
+      &.new-column {
+        padding: 0.5rem;
+        flex-shrink: 0;
+        display: flex;
+        flex-direction: column;
+        gap: 1.25rem;
+        overflow: hidden;
+        max-height: 100%;
+        width: 20rem;
+        border-width: 1px;
+        border-radius: 0.75rem;
+        background-color: rgb(241 245 249);
+        box-shadow:
+          0 1px 3px 0 #cbd5e1,
+          0 1px 2px -1px #cbd5e1;
+      }
+
+      input[type="text"] {
+        box-shadow: none;
+        padding: 0.25rem 0.5rem;
+        border-width: 1px;
+        border-radius: 0.5rem;
+        border-color: rgb(148 163 184);
+        font-weight: 500;
+      }
+      textarea {
+        outline: none;
+        box-shadow:
+          0 1px 3px 0 rgb(0 0 0 / 0.1),
+          0 1px 2px -1px rgb(0 0 0 / 0.1);
+        padding: 0.25rem 0.5rem;
+        width: 100%;
+        resize: none;
+        height: 3.5rem;
+        border-radius: 0.5rem;
+        font-size: 0.875rem;
+        line-height: 1.25rem;
+
+        &::placeholder {
+          color: rgb(100 116 139);
+        }
+      }
+
+      .buttons {
+        display: flex;
+        justify-content: space-between;
+      }
+
+      button {
+        font-size: 0.875rem;
+        line-height: 1.25rem;
+        border-radius: 0.5rem;
+        text-align: left;
+        padding: 0.5rem;
+        font-weight: 500;
+
+        &[type="submit"] {
+          color: white;
+          background-color: rgb(57 146 255);
+        }
+        &[type="button"]:hover,
+        &[type="button"]:focus {
+          background-color: rgb(226 232 240);
+        }
+      }
+    }
+
+    & > .spacer {
+      flex-shrink: 0;
+      width: 2rem;
+      height: 0.25rem;
     }
   }
 }
