--- a/public/css/style.css
+++ b/public/css/style.css
@@ -105,7 +105,7 @@ form {
     width: 100%;
     border-radius: 0.375rem;
     border-width: 0;
-    padding: 0.375rem 0;
+    padding: 0.375rem 0.5rem;
     color: rgb(17 24 39);
     box-shadow:
       inset 0 0 0 1px rgb(209 213 219),
