--- a/public/css/style.css
+++ b/public/css/style.css
@@ -345,7 +345,7 @@ main.board {
       display: inline-block;
       color: rgb(30 41 59);
       font-weight: 500;
-      width: 100%;
+      width: calc(100% - 4rem);
       background-color: transparent;
       cursor: pointer;
     }
