--- a/public/css/style.css
+++ b/public/css/style.css
@@ -25,9 +25,11 @@ nav {
   border-bottom-width: 1px;
   border-color: rgb(30 41 59);
   display: flex;
+  gap: 0.5rem;
+  white-space: nowrap;
   align-items: center;
   justify-content: space-between;
-  padding: 1rem 2rem;
+  padding: 1rem clamp(0.5rem, 5vw, 2rem);
   box-sizing: border-box;
 
   .logo {
@@ -38,13 +40,14 @@ nav {
 
     :first-child {
       color: rgb(255 255 255);
-      font-size: 1.5rem;
+      font-size: clamp(0.5rem, 4.5vw, 1.5rem);
       font-weight: 900;
       text-decoration: none;
       line-height: 2rem;
     }
     :last-child {
       color: rgb(100 116 139);
+      font-size: clamp(0.5rem, 5vw, 1rem);
     }
   }
 
@@ -61,7 +64,7 @@ nav {
 
     & > a {
       color: rgb(100 116 139);
-      font-size: 0.75rem;
+      font-size: clamp(0.5rem, 4vw, 0.75rem);
       line-height: 1rem;
       text-transform: uppercase;
       font-weight: 700;
@@ -91,10 +94,12 @@ main {
 
 main.login,
 main.splash {
+  align-items: center;
+  padding: 0 2rem;
   article {
     width: 100%;
     max-width: 28rem;
-    margin: 5rem auto;
+    margin: 5rem 0;
 
     & > * + * {
       margin-top: 0.875rem;
@@ -169,7 +174,7 @@ main.splash {
     justify-content: space-evenly;
     width: 100%;
     max-width: 28rem;
-    margin: 2rem auto 0;
+    margin: 2rem 0 0;
     border-radius: 1.5rem;
     padding: 2.5rem;
     background-color: rgb(30 41 59);
