Fixed a bug with the add a card button

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -585,6 +585,7 @@ main.board {
           resize: none;
           background-color: transparent;
           cursor: pointer;
+          color: transparent;
 
           &::placeholder {
             color: transparent;
